<resources>
    <string name="app_name">CalculatorMobile</string>
    <string name="zero_button">0</string>
    <string name="triple_zero_button">000</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="c_button">C</string>
    <string name="plus_minus_button">+/-</string>
    <string name="percentage_button">%</string>
    <string name="divide_button">/</string>
    <string name="multiply_button">x</string>
    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="equals_button">=</string>
    <string name="dot_button">.</string>
</resources>